Delete md files

--- a/terms.html
+++ b/terms.html
@@ -30,7 +30,7 @@
         }
 
         h1 {
-            color: #d32f2f;
+            color: #db3838;
             margin-bottom: 8px;
             font-size: 28px;
         }
@@ -47,7 +47,7 @@
             margin-top: 30px;
             margin-bottom: 15px;
             padding-bottom: 8px;
-            border-bottom: 2px solid #e53935;
+            border-bottom: 2px solid #f65754;
         }
 
         h3 {
@@ -74,7 +74,7 @@
 
         .highlight-box {
             background: #ffebee;
-            border-left: 4px solid #e53935;
+            border-left: 4px solid #f65754;
             padding: 15px;
             margin: 20px 0;
             border-radius: 0 8px 8px 0;
@@ -90,7 +90,7 @@
         }
 
         a {
-            color: #d32f2f;
+            color: #db3838;
         }
 
         .section-number {
